# mcp-servers

./: .gitignore  LICENSE  README.md  casual-mcp-servers.code-workspace  casual_mcp_config.json  pyproject.toml
math/: README.md  pyproject.toml
math/casual_mcp_server_math/: server.py
mcp-servers/math/: server.py
mcp-servers/time/: server.py
mcp-servers/weather/: server.py
mcp-servers/words/: server.py
mcp_common/: __init__.py  cli.py
servers/math/: Dockerfile  README.md  pyproject.toml
servers/math/casual_mcp_server_math/: server.py
servers/time/: Dockerfile  README.md  pyproject.toml
servers/time/casual_mcp_server_time/: server.py
servers/trivia/: Dockerfile  pyproject.toml
servers/trivia/casual_mcp_server_trivia/: server.py
servers/weather/: Dockerfile  README.md  pyproject.toml
servers/weather/casual_mcp_server_weather/: server.py
servers/words/: Dockerfile  README.md  pyproject.toml
servers/words/casual_mcp_server_words/: server.py
servers_shared/: pyproject.toml
time/: README.md  pyproject.toml
time/casual_mcp_server_time/: __init__.py
weather/: README.md  pyproject.toml
weather/casual_mcp_server_weather/: server.py
words/: README.md  pyproject.toml
words/casual_mcp_server_words/: server.py
