[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "casual-mcp-servers-shared"
version = "0.1.0"
description = "Shared CLI and utilities for MCP servers"
authors = [{ name = "Alex Stansfield" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"


[tool.setuptools]
package-dir = { "" = "." }