[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "casual-mcp-server-weather"
version = "0.1.0"
description = "Weather and air quality utilities as a FastMCP server"
authors = [{name = "Alex Stansfield"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "pydantic",
    "requests",
]

[project.urls]
Homepage = "https://github.com/alexstansfield/casual-mcp-servers"
Issues = "https://github.com/alexstansfield/casual-mcp-servers/issues"
Source = "https://github.com/alexstansfield/casual-mcp-servers"

[project.scripts]
casual-mcp-server-weather = "casual_mcp_server_weather:main"
