[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "casual-mcp-server-math"
version = "1.0.0"
description = "Math and conversion utilities as a FastMCP server"
authors = [{name = "Alex Stansfield"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "pydantic",
]

[project.urls]
Homepage = "https://github.com/alexstansfield/casual-mcp-servers"
Issues = "https://github.com/alexstansfield/casual-mcp-servers/issues"
Source = "https://github.com/alexstansfield/casual-mcp-servers"

[project.scripts]
casual-mcp-server-math = "casual_mcp_server_math:main"
